--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "^0.22.0",
     "mongodb": "^2.2.25",
     "request": "^2.81.0",
+    "require": "^2.4.20",
     "superagent": "^3.5.2"
   }
 }
